crates/typecheck/tests/fixtures/errors/not_callable.ax
fn main() { val x = 1 x() }